package a4.io;

import "google/protobuf/descriptor.proto";

import "a4/io/A4.proto";

message StreamHeader
{
    option (fixed_class_id) = 100;
    required int32 a4_version = 1;
    optional string description = 2;

    // if metadata_refers_forward is true, metadata refer
    // to objects that follow them instead of precede them
    optional bool metadata_refers_forward = 5 [default=false];
}

message ClassCount
{
    required int32 class_id = 1;
    required int32 count = 2;
    optional string class_name = 3;
}

message StreamFooter
{
    option (fixed_class_id) = 102;

    // MUST be number of bytes written before the footer size byte
    required int64 size = 1;

    // MUST specify the offset from stream start of all metadata messages
    repeated int64 metadata_offsets = 2;

    // MUST specify the offset from stream start of all ProtoClass messages
    repeated int64 protoclass_offsets = 3;

    // MAY give information on class id numbers
    repeated ClassCount class_count = 4;
}

message StartCompressedSection
{
    option (fixed_class_id) = 104;
    enum Compression {
        ZLIB = 0;
        GZIP = 1;
        BZIP2 = 2;
        SNAPPY = 3;
        LZ4 = 4;
    }
    optional Compression compression = 1;
}

message EndCompressedSection
{
    option (fixed_class_id) = 106;
}

message ProtoClass
{
    option (fixed_class_id) = 108;
    optional int32 class_id = 1;
    optional string full_name = 2;
    repeated google.protobuf.FileDescriptorProto file_descriptor = 3;
}


